--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "vite": "^2.4.4",
-    "vite-plugin-react": "^1.0.0"
+    "vite-plugin-react": "^1.0.0",
+    "axios": "^1.7.2"
   },
   "scripts": {
     "dev": "vite",
@@ -18,11 +19,6 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-  },
-  "dependencies": {
-    "axios": "^1.7.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
